@@ -227,7 +227,6 @@ CREATE TABLE `tl_iso_config` (
   `billing_fields` blob NULL,
   `phone` varchar(64) NOT NULL default '',
   `emailShipping` varchar(255) NOT NULL default '',
-  `enableGoogleAnalytics` char(1) NOT NULL default '',
   `limitMemberCountries` char(1) NOT NULL default '',
   `gallery` varchar(64) NOT NULL default '',
   `missing_image_placeholder` varchar(255) NOT NULL default '',
